<resources>
    <string name="app_name" translatable="false">Material Design</string>
    <string name="title_activity">Discs</string>
    <string name="show_discs">Show discs</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="exit">Quit</string>
    <string name="action_settings">Settings</string>
    <string name="edit_disc">Edit Disc</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="enter_the_web_url">Enter the web url</string>
    <string name="enter_the_disc_code">Enter the disc code</string>
    <string name="enter_the_group_name">Enter the group name</string>
    <string name="enter_the_disc_name">Enter the disc name</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="disable_dark_mode">Disable Dark Mode</string>
    <string name="name">Name</string>
    <string name="group">Group</string>
    <string name="code">Code</string>
    <string name="web_url">Web Url</string>
    <string name="comment">Comment</string>
</resources>