<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DiscEditingActivity"
        android:background="@color/backgroundColor">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="@dimen/margin_DiscEditing">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_button_DiscEditing">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_person_24"
                    android:id="@+id/ivName"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="4"
                    app:tint="@color/txtColorB"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:ems="10"
                        android:textSize="@dimen/etSizeDiscEditing"
                        style="@style/textViewStyle"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/enter_the_disc_name"
                        android:textColor="@color/txtColorA"
                        android:textColorHint="@color/txtColorB"
                        android:backgroundTint="@color/colorPrimary"
                        android:ems="10"
                        android:id="@+id/etName"
                        android:textSize="@dimen/etSizeDiscEditing"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_button_DiscEditing">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_group_24"
                    android:id="@+id/ivGroup"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="4"
                    app:tint="@color/txtColorB"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/group"
                        android:ems="10"
                        android:textSize="@dimen/etSizeDiscEditing"
                        style="@style/textViewStyle"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/enter_the_group_name"
                        android:textColor="@color/txtColorA"
                        android:textColorHint="@color/txtColorB"
                        android:backgroundTint="@color/colorPrimary"
                        android:ems="10"
                        android:id="@+id/etGroup"
                        android:textSize="@dimen/etSizeDiscEditing"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_button_DiscEditing">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_edit"
                    android:id="@+id/ivDiscCode"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="4"
                    app:tint="@color/txtColorB"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/code"
                        android:ems="10"
                        android:textSize="@dimen/etSizeDiscEditing"
                        style="@style/textViewStyle"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/enter_the_disc_code"
                        android:textColor="@color/txtColorA"
                        android:textColorHint="@color/txtColorB"
                        android:backgroundTint="@color/colorPrimary"
                        android:ems="10"
                        android:id="@+id/etDiscCode"
                        android:textSize="@dimen/etSizeDiscEditing"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_button_DiscEditing">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_web_24"
                    android:id="@+id/ivWeb"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="4"
                    app:tint="@color/txtColorB"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/web_url"
                        android:ems="10"
                        android:textSize="@dimen/etSizeDiscEditing"
                        style="@style/textViewStyle"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebEmailAddress"
                        android:hint="@string/enter_the_web_url"
                        android:textColor="@color/txtColorA"
                        android:textColorHint="@color/txtColorB"
                        android:backgroundTint="@color/colorPrimary"
                        android:ems="10"
                        android:id="@+id/etWeb"
                        android:textSize="@dimen/etSizeDiscEditing"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_button_DiscEditing">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_comment_24"
                    android:id="@+id/ivComment"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="4"
                    app:tint="@color/txtColorB"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/comment"
                        android:ems="10"
                        android:textSize="@dimen/etSizeDiscEditing"
                        style="@style/textViewStyle"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/enter_your_comment"
                        android:textColor="@color/txtColorA"
                        android:textColorHint="@color/txtColorB"
                        android:backgroundTint="@color/colorPrimary"
                        android:ems="10"
                        android:id="@+id/etComment"
                        android:textSize="@dimen/etSizeDiscEditing"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>